# starfellcode

./: .gitignore  Cargo.toml  ENV_CONFIG.md  FILE_SEARCH_ARCHITECTURE.md  FILE_SEARCH_CHECKLIST.md  FILE_SEARCH_IMPROVEMENTS.md  FILE_SEARCH_QUICK_START.md  FILE_SEARCH_SUMMARY.md  PIXEL_LAYOUT_FINAL_SUMMARY.md  PIXEL_LAYOUT_QUICK_START.md  PRIORITY_1_STATUS_REPORT.md  PRIORITY_2_FRAMEWORK_COMPLETE.md  PRIORITY_2_IMPLEMENTATION_GUIDE.md  PRIORITY_2_INTEGRATION_CHECKLIST.md  PRIORITY_2_QUICK_REFERENCE.md  PRIORITY_3_PLANNING_GUIDE.md  PROJECT_COMPLETION_SUMMARY.md  RATATUI_QUICK_REFERENCE.md  RATATUI_V2_IMPLEMENTATION_COMPLETE.md  RATATUI_V2_IMPLEMENTATION_GUIDE.md  README.md  SESSION_SUMMARY.md  run.sh
docs/: GEMINI_CLI_CORE_ANALYSIS.md  PRIORITY_3_BUILD_GUIDE.md  PRIORITY_3_COMPLETE.md  PRIORITY_3_QUICK_START.md  PRIORITY_3_SUMMARY.md  PROJECT_STRUCTURE.md
examples/: protype.html  v2.html  v3.html
examples/grok-cli-main/: README.md  package.json
src/: app.rs  main.rs
src/ai/: advanced_client.rs  client.rs  commands.rs  config.rs  context.rs  fim.rs  mod.rs  prompt_builder.rs
src/commands/: file_commands.rs  mod.rs
src/core/: buffer.rs  conversation_engine.rs  cursor.rs  error_recovery.rs  gemini_architecture.rs  hooks.rs  logger.rs  message_history.rs  mod.rs  performance_optimizer.rs  response_validation.rs  retry_handler.rs  routing_strategies.rs  routing_strategy.rs  streaming.rs  streaming_optimizer.rs  test_suite.rs  token_calculator.rs  tool_executor.rs
src/events/: handler.rs
src/prompts/: the-augment.xml
src/tools/: code_tools.rs  file_tools.rs  (+6 more)
(+25 files in other folders)
