[package]
name = "ghost_text_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
ropey = "1.6"
tree-sitter = "0.20"
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
ignore = "0.4"