[package]
name = "ghost_text_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
ropey = "1.6"
tree-sitter = "0.20"
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
ignore = "0.4"
dotenv = "0.15"
anyhow = "1.0"
chrono = { version = "0.4.42", features = ["serde"] }
unicode-width = "0.1"
regex = "1.10"
arboard = "3.3"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.8"
